centos2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: centos-pod
  name: centos-pod
spec:
  containers:
  - image: centos
    name: centos1
    stdin: true
    tty: true
