kuard-pod-v.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: kuard-pod
  name: kuard-pod
spec:
  nodeSelector:
    kubernetes.io/hostname: "gke-kube-cluster-default-pool-752f28e0-67sd"
  volumes:
  - name: "kuard-data"
    hostPath:
      path: "/data"
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard
    volumeMounts:
    - mountPath: "/backup"
      name: "kuard-data"
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
