kubia-pod-rp-enabled.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: kubia-pod-rp-enabled
  name: kubia-pod-rp-enabled
spec:
  containers:
  - name: kubia
    image: luksa/kubia
    ports:
    - name: http
      containerPort: 8080
    readinessProbe:
      exec:
        command:
        - ls
        - /var/ready
